--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "domready": "^1.0.8",
     "express": "^4.13.3",
     "grunt": "^0.4.5",
+    "jade": "^1.11.0",
     "matchdep": "^1.0.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2"
@@ -26,6 +27,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express": "^1.4.1",
     "grunt-nodemon": "^0.4.1",
-    "grunt-sass": "^1.1.0"
+    "grunt-sass": "^1.1.0",
+    "jade": "^1.11.0"
   }
 }
