--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "browserify-shim": {
+    "three": "global:THREE"
+  },
   "author": "dhaakon",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
+    "box2d-html5": "^0.1.230",
+    "dhaak-anim": "0.0.4",
     "domready": "^1.0.8",
     "express": "^4.13.3",
     "grunt": "^0.4.5",
@@ -18,9 +26,13 @@
     "json-loader": "^0.5.4",
     "matchdep": "^1.0.0",
     "node-bourbon": "^4.2.3",
-    "node-neat": "^1.7.2"
+    "node-neat": "^1.7.2",
+    "svg.js": "^2.2.5",
+    "three.js": "^0.73.2"
   },
   "devDependencies": {
+    "browserify-shim": "^3.8.12",
+    "debowerify": "^1.3.1",
     "grunt-babel": "^6.0.0",
     "grunt-browserify": "^4.0.1",
     "grunt-concurrent": "^2.1.0",
