--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "box2d-html5": "^0.1.230",
+    "browserify-shim": "^3.8.12",
     "dhaak-anim": "0.0.4",
     "domready": "^1.0.8",
     "express": "^4.13.3",
@@ -25,10 +26,17 @@
     "jade": "^1.11.0",
     "json-loader": "^0.5.4",
     "matchdep": "^1.0.0",
+    "matter-js": "^0.9.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
+    "normalize-path-scale": "^2.0.0",
+    "parse-svg-path": "^0.1.1",
+    "simplify-path": "^1.1.0",
+    "svg-path-bounding-box": "^1.0.4",
+    "svg-path-contours": "^2.0.0",
     "svg.js": "^2.2.5",
-    "three.js": "^0.73.2"
+    "three.js": "^0.73.2",
+    "triangulate-contours": "^1.0.2"
   },
   "devDependencies": {
     "browserify-shim": "^3.8.12",
@@ -41,7 +49,7 @@
     "grunt-express": "^1.4.1",
     "grunt-nodemon": "^0.4.1",
     "grunt-sass": "^1.1.0",
-    "grunt-svg2json": "^0.1.8",
+    "grunt-svg2json": "^0.1.9",
     "jade": "^1.11.0"
   }
 }
