--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "normalize-path-scale": "^2.0.0",
     "parse-svg-path": "^0.1.1",
     "simplify-path": "^1.1.0",
+    "svg-mesh-3d": "^1.0.1",
     "svg-path-bounding-box": "^1.0.4",
     "svg-path-contours": "^2.0.0",
     "svg.js": "^2.2.5",
