--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-neat": "^1.7.2",
     "normalize-path-scale": "^2.0.0",
     "parse-svg-path": "^0.1.1",
+    "poly-decomp": "^0.1.1",
     "simplify-path": "^1.1.0",
     "svg-mesh-3d": "^1.0.1",
     "svg-path-bounding-box": "^1.0.4",
