--- a/package.json
+++ b/package.json
@@ -12,33 +12,42 @@
   "author": "dhaakon",
   "license": "ISC",
   "dependencies": {
+    "array-shuffle": "^1.0.0",
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "box2d-html5": "^0.1.230",
+    "brfs": "^1.4.3",
     "browserify-shim": "^3.8.12",
     "dhaak-anim": "0.0.4",
     "domready": "^1.0.8",
     "express": "^4.13.3",
+    "gl-vec3": "^1.0.3",
     "grunt": "^0.4.5",
     "jade": "^1.11.0",
     "json-loader": "^0.5.4",
     "matchdep": "^1.0.0",
     "matter-js": "^0.9.0",
+    "mesh-reindex": "^1.0.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
     "normalize-path-scale": "^2.0.0",
     "parse-svg-path": "^0.1.1",
     "poly-decomp": "^0.1.1",
     "simplify-path": "^1.1.0",
+    "stringify": "^4.0.0",
     "svg-mesh-3d": "^1.0.1",
     "svg-path-bounding-box": "^1.0.4",
     "svg-path-contours": "^2.0.0",
     "svg.js": "^2.2.5",
+    "three-simplicial-complex": "^69.0.6",
     "three.js": "^0.73.2",
-    "triangulate-contours": "^1.0.2"
+    "triangle-centroid": "^1.0.0",
+    "triangulate-contours": "^1.0.2",
+    "tweenr": "^2.1.3",
+    "unindex-mesh": "^2.0.0"
   },
   "devDependencies": {
     "browserify-shim": "^3.8.12",
