--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "svg-path-bounding-box": "^1.0.4",
     "svg-path-contours": "^2.0.0",
     "svg.js": "^2.2.5",
+    "three-buffer-vertex-data": "^1.0.0",
     "three-simplicial-complex": "^69.0.6",
     "three.js": "^0.73.2",
     "triangle-centroid": "^1.0.0",
