--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "studies",
+  "name": "bubble-pop",
   "version": "1.0.0",
-  "description": "programmatic studies",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,10 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "array-shuffle": "^1.0.0",
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "box2d-html5": "^0.1.230",
     "brfs": "^1.4.3",
@@ -42,7 +38,9 @@
     "svg-path-bounding-box": "^1.0.4",
     "svg-path-contours": "^2.0.0",
     "svg.js": "^2.2.5",
+    "svgpath": "^2.1.5",
     "three-buffer-vertex-data": "^1.0.0",
+    "three-orbit-controls": "^72.0.0",
     "three-simplicial-complex": "^69.0.6",
     "three.js": "^0.73.2",
     "triangle-centroid": "^1.0.0",
@@ -51,6 +49,11 @@
     "unindex-mesh": "^2.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.5.0",
     "browserify-shim": "^3.8.12",
     "debowerify": "^1.3.1",
     "grunt-babel": "^6.0.0",
