--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "box2d-html5": "^0.1.230",
     "brfs": "^1.4.3",
     "browserify-shim": "^3.8.12",
+    "camera-unproject": "^1.0.1",
     "dhaak-anim": "0.0.4",
     "domready": "^1.0.8",
     "express": "^4.13.3",
+    "gl-mat4": "^1.1.4",
     "gl-vec3": "^1.0.3",
     "grunt": "^0.4.5",
     "jade": "^1.11.0",
