--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "svg.js": "^2.2.5",
     "svgpath": "^2.1.5",
     "three-buffer-vertex-data": "^1.0.0",
+    "three-effectcomposer": "0.0.1",
     "three-orbit-controls": "^72.0.0",
     "three-simplicial-complex": "^69.0.6",
     "three.js": "^0.73.2",
