--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "brfs": "^1.4.3",
     "browserify-shim": "^3.8.12",
     "camera-unproject": "^1.0.1",
+    "dancer": "^0.4.0",
     "dhaak-anim": "0.0.4",
     "domready": "^1.0.8",
     "express": "^4.13.3",
